; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_detachInterrupt.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_detachInterrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@intFunc = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @detachInterrupt(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32* @portConfigRegister(i64 %4)
  store i32* %5, i32** %3, align 8
  %6 = call i32 (...) @__disable_irq()
  %7 = load i32*, i32** %3, align 8
  %8 = load volatile i32, i32* %7, align 4
  %9 = and i32 %8, -983041
  %10 = or i32 %9, 16777216
  %11 = load i32*, i32** %3, align 8
  store volatile i32 %10, i32* %11, align 4
  %12 = load i32**, i32*** @intFunc, align 8
  %13 = load i64, i64* %2, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  store i32* null, i32** %14, align 8
  %15 = call i32 (...) @__enable_irq()
  ret void
}

declare dso_local i32* @portConfigRegister(i64) #1

declare dso_local i32 @__disable_irq(...) #1

declare dso_local i32 @__enable_irq(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
